# cod_tests

./: 00_assignment.c  01_comment.c  02_printf.c  03_struct.c  04_for.c  05_array.c  07_function.c  08_while.c  09_do_while.c  10_pointer.c  11_precedence.c  13_integer_literals.c  14_if.c  15_recursion.c  16_nesting.c  17_enum.c  18_include.c  19_pointer_arithmetic.c  20000112-1.c  20000121-1.c  20000205-1.c  20000217-1.c  20000224-1.c  20000225-1.c  20000227-1.c  20000313-1.c  20000314-1.c  20000314-2.c  20000314-3.c  20000403-1.c  20000412-3.c  20000412-4.c  20000412-5.c  20000412-6.c  20000419-1.c  20000422-1.c  20000503-1.c  20000511-1.c  20000519-2.c  20000523-1.c  (+518 more)
pre_patch/: 20000314-3.c  20000314-3.patch  20000403-1.patch  20000412-6.c  20000412-6.patch  20000703-1.patch  20000717-3.c  20000717-3.patch  20000722-1.patch  20000726-1.patch  20000801-1.patch  20000801-2.patch  20000808-1.patch  20000910-1.patch  20000910-2.c  20000910-2.patch  20001009-1.c  20001009-1.patch  20001009-2.c  20001009-2.patch  20001017-1.c  20001017-1.patch  20001026-1.patch  20010206-1.patch  20010209-1.patch  20010224-1.patch  20010518-1.c  20010518-1.patch  20011126-2.c  20011126-2.patch  20020107-1.patch  20020213-1.patch  20020215-1.patch  20020321-1.patch  20020503-1.patch  20020529-1.patch  20020911-1.patch  20021127-1.patch  20030221-1.patch  20030307-1.patch  (+54 more)
