cmake_minimum_required(VERSION 2.8.3)
cmake_policy(VERSION 2.8.3)
project(cod_tests)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

include(FindCERCSProject)
include(CTest)

if (DEFINED CERCS_USE_INSTALLED) 
   set (CERCS_USE_INSTALLED)
   list (APPEND CERCS_FIND_OPTIONS "USE_INSTALLED")
endif(DEFINED CERCS_USE_INSTALLED) 

FIND_CERCS_PROJECT (cercs_env LIBRARY cercs_env INCLUDES cercs_env.h REQUIRED ${CERCS_FIND_OPTIONS})
FIND_CERCS_PROJECT (atl LIBRARY atl INCLUDES atl.h REQUIRED ${CERCS_FIND_OPTIONS})
FIND_CERCS_PROJECT (ffs LIBRARY ffs INCLUDES ffs.h REQUIRED ${CERCS_FIND_OPTIONS})

list (APPEND INC_DIRS ${CERCS_ENV_INCLUDE_DIR} ${ATL_INCLUDE_DIR} ${FFS_INCLUDE_DIR})
list (APPEND LIB_DIRS ${CMAKE_CURRENT_BINARY_DIR} ${CERCS_ENV_LIB_DIR} ${ATL_LIB_DIR} ${FFS_LIB_DIR} ${DILL_LIB_DIR})
list (APPEND BASE_LIBS m ${CERCS_ENV_LIBRARIES} ${ATL_LIBRARIES} ${FFS_LIBRARIES} ${DILL_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})

INCLUDE_DIRECTORIES(${INC_DIRS} ${DL_INCLUDE_DIR})
LINK_DIRECTORIES(${LIB_DIRS})


file(READ cod_tests COD_TESTS)

# Convert file contents into a CMake list (where each element in the list
# is one line of the file)
#
STRING(REGEX REPLACE ";" "\\\\;" COD_TESTS "${COD_TESTS}")
STRING(REGEX REPLACE "\n" ";" COD_TESTS "${COD_TESTS}")

ENABLE_TESTING()

foreach (TEST ${COD_TESTS} )
    ADD_EXECUTABLE(${TEST} ${TEST}.c)
    TARGET_LINK_LIBRARIES(${TEST} ffs ${BASE_LIBS})
    ADD_TEST(${TEST} "${TEST}")
    SET_TESTS_PROPERTIES(${TEST} PROPERTIES SKIP_RETURN_CODE 77)
endforeach()

